Today Chrome has a built in notification center that is used for web and app notifications. However, there are two things it doesn't provide:
1. It only works with some Linux builds. Others are not supported.
2. Some Mac users feel that all notifications should go to the Mac notification center instead of having two separate notification centers.
If we provide and API which lets a chrome app or extension get to notifications, this will unblock third parties from creating an app which can show notifications on Linux, or forward notifications to the Mac notification center.
So, Let's build and implement a NotificationProvider API to allow a custom notification provider to handle notifications for these two cases.
Comment 1 by kalman@chromium.org, Jul 24 2014