Notification Provider API

The Notification provider API will reroute the notifications that are supposed to be sent to the Chrome Notification Center, so an app can get the notifications and have its own implementation of notification center.

BUG=397197

Review URL: https://codereview.chromium.org/356673003

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@287155 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 0a0e32150f1f3bfce3d0ecd082da4a6f11b0101f