chrome/common/extensions/permissions/permission_set_unittest.cc
@@ -656,6 +656,7 @@ TEST(PermissionsTest, PermissionMessages) {
   skip.insert(APIPermission::kLedger);
   skip.insert(APIPermission::kLogPrivate);
   skip.insert(APIPermission::kNotifications);
+  skip.insert(APIPermission::kNotificationProvider);
   skip.insert(APIPermission::kOverrideEscFullscreen);
   skip.insert(APIPermission::kPointerLock);
   skip.insert(APIPermission::kPower);
